Make calligram-shape invisible, fix height to match last content element

--- a/css/style.css
+++ b/css/style.css
@@ -365,9 +365,6 @@ a.inline-link:hover {
   width: 200px;
   height: 2000px;
   shape-outside: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-  background: var(--vintage-blue);
-  opacity: 0.08;
   margin-right: 25px;
   margin-bottom: 20px;
 }
